fix in night mode code hard to read.

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -2,7 +2,9 @@
   --lottery-option-color: var(--muted-color);
   --lottery-option-active-color: var(--secondary-color);
 }
-
+.Badge--lottery {
+  background: #c72828;
+}
 .ComposerBody-lottery {
   margin-right: 15px;
 
